--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fullcalendar/daygrid": "^4.4.0",
     "@fullcalendar/interaction": "^4.4.0",
     "@fullcalendar/timegrid": "^4.4.0",
+    "angular2-chartjs": "^0.5.1",
     "bootstrap": "^4.5.0",
     "exceljs": "^4.2.0",
     "file-saver": "^2.0.5",
@@ -32,13 +33,13 @@
     "jwt-decode": "^2.2.0",
     "ngx-spinner": "^9.0.2",
     "primeicons": "^4.0.0",
-    "primeng": "^9.1.0",
+    "primeng": "^9.1.3",
+    "primeng-lts": "^10.0.9",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "xlsx": "^0.16.9",
-    "zone.js": "~0.10.2",
-    "angular2-chartjs": "^0.5.1",
-    "quill": "^1.3.7"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.4",
