--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fullcalendar/daygrid": "^4.4.0",
     "@fullcalendar/interaction": "^4.4.0",
     "@fullcalendar/timegrid": "^4.4.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "angular2-chartjs": "^0.5.1",
     "bootstrap": "^4.5.0",
     "exceljs": "^4.2.0",
